# roman-numerals

./: .editorconfig  .gitattributes  .gitignore  CHANGES.rst  README.rst
debian/: changelog  control  copyright  gbp.conf  rules  watch
debian/patches/: Use-a-PEP-639-licence-expression.patch  series
debian/tests/: control  python3-roman-numerals
debian/upstream/: metadata
python/: .pytest.toml  .ruff.toml
rust/: Cargo.toml  README.md
rust/benchmarks/: Cargo.toml
rust/benchmarks/benches/: benchmark.rs
rust/src/: lib.rs
utils/: convert_attestations.py
